// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContactForm should be disabled when submitting 1`] = `
<DocumentFragment>
  <div
    class="page-intro"
  >
    <h1
      class=""
    >
      Contact us
    </h1>
  </div>
  <section
    class="container"
  >
    <h2
      class="medium"
    >
      Send us general questions and suggestions using the form below
    </h2>
    <p>
      Our helpdesk team will receive and review your message
    </p>
    <hr />
    <div
      class="uniprot-grid-cell--span-12 homepage message message--warning"
      role="status"
    >
      <div
        class="message__side-border"
      />
      <test-file-stub
        class="message--icon-align-top"
        height="1.125em"
        width="1.125em"
      />
      <div
        class="message__title"
      >
        Our Proteomes and UniProtKB/TrEMBL resources are undergoing a significant transition. Please read our 
        <a
          href="/help/refprot_only_changes"
        >
          help page
        </a>
        , view 
        <a
          class="external-link no-right-margin"
          href="https://ftp.ebi.ac.uk/pub/contrib/UniProt/proteomes/"
          rel="noopener"
          target="_blank"
        >
          affected entries and proteomes
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
        , or 
        <a
          href="/contact"
        >
          contact us
        </a>
         with any questions.
      </div>
    </div>
    <form
      aria-label="Contact form"
    >
      <label
        class="label"
        for="name-1"
      >
        Name:
      </label>
      <span
        class="input"
      >
        <input
          data-hj-allow="true"
          id="name-1"
          maxlength="100"
          name="name"
          placeholder=" "
          type="text"
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label"
        for="email-1"
      >
        E-mail:
      </label>
      <span
        class="input"
      >
        <input
          data-hj-allow="true"
          id="email-1"
          maxlength="100"
          minlength="4"
          name="email"
          placeholder="myemail@example.com"
          required=""
          type="email"
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label"
        for="subject-1"
      >
        Subject:
      </label>
      <span
        class="input"
      >
        <input
          data-hj-allow="true"
          id="subject-1"
          maxlength="100"
          minlength="1"
          name="subject"
          placeholder=" "
          required=""
          type="text"
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label label-wide"
        for="message-1"
      >
        Message:
        <br />
        <small>
          This will be received and reviewed by our team. If you are submitting an error report, please explain what you have been trying, include your input, specify what happened, and include the error message if there is one.
        </small>
      </label>
      <span
        class="input input__message"
      >
        <textarea
          data-hj-allow="true"
          id="message-1"
          minlength="1"
          name="message"
          placeholder="My detailed message to the UniProt team"
          required=""
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label label-wide"
        for="prefilled-1"
      >
        Additional information:
        <br />
        <small>
          This is sent with your message in order to help our helpdesk help you.
        </small>
      </label>
      <span
        class="input input__message"
      >
        <textarea
          data-hj-allow="true"
          id="context-1"
          name="context"
          readonly=""
        >
          Referred from: http://localhost
User browser: mocked user agent
Website version: #git_commit_id
        </textarea>
      </span>
      <label
        class="privacy"
      >
        <input
          name="privacy"
          required=""
          type="checkbox"
        />
        I agree to the processing of my data for the purposes described in this 
        <a
          href="/help/privacy"
        >
          privacy notice
        </a>
        .
        <span
          aria-hidden="true"
          class="required"
        >
           *
        </span>
      </label>
      <input
        aria-hidden="true"
        name="requiredForRobots"
        tabindex="-1"
        type="text"
      />
      <button
        class="button primary disabled"
        disabled=""
        type="submit"
      >
        Sending message
      </button>
      <aside>
        <h2
          class="small"
        >
          Other ways to contact us
        </h2>
        <ul
          class="no-bullet"
        >
          <li>
            <a
              href="/update"
            >
              Send updates or corrections
            </a>
          </li>
          <li>
            <a
              class="external-link"
              href="https://www.ebi.ac.uk/swissprot/Submissions/spin/"
              rel="noopener"
              target="_blank"
            >
              Submit new protein sequence data
              <test-file-stub
                data-testid="external-link-icon"
                width="12.5"
              />
            </a>
          </li>
          <li>
            <a
              href="/supporting-data#integration-form"
            >
              Connect your database with UniProt
            </a>
          </li>
        </ul>
      </aside>
    </form>
  </section>
</DocumentFragment>
`;

exports[`ContactForm should render for feedback contact form 1`] = `
<DocumentFragment>
  <div
    class="page-intro"
  >
    <h1
      class=""
    >
      Contact us
    </h1>
  </div>
  <section
    class="container"
  >
    <h2
      class="medium"
    >
      Submit updates or corrections to UniProt
    </h2>
    <p>
      Our helpdesk team will receive and review your message
    </p>
    <hr />
    <div
      class="uniprot-grid-cell--span-12 homepage message message--warning"
      role="status"
    >
      <div
        class="message__side-border"
      />
      <test-file-stub
        class="message--icon-align-top"
        height="1.125em"
        width="1.125em"
      />
      <div
        class="message__title"
      >
        Our Proteomes and UniProtKB/TrEMBL resources are undergoing a significant transition. Please read our 
        <a
          href="/help/refprot_only_changes"
        >
          help page
        </a>
        , view 
        <a
          class="external-link no-right-margin"
          href="https://ftp.ebi.ac.uk/pub/contrib/UniProt/proteomes/"
          rel="noopener"
          target="_blank"
        >
          affected entries and proteomes
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
        , or 
        <a
          href="/contact"
        >
          contact us
        </a>
         with any questions.
      </div>
    </div>
    <form
      aria-label="Contact form"
    >
      <label
        class="label"
        for="name-1"
      >
        Name:
      </label>
      <span
        class="input"
      >
        <input
          data-hj-allow="true"
          id="name-1"
          maxlength="100"
          name="name"
          placeholder=" "
          type="text"
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label"
        for="email-1"
      >
        E-mail:
      </label>
      <span
        class="input"
      >
        <input
          data-hj-allow="true"
          id="email-1"
          maxlength="100"
          minlength="4"
          name="email"
          placeholder="myemail@example.com"
          required=""
          type="email"
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label"
        for="subject-1"
      >
        Subject:
      </label>
      <span
        class="input"
      >
        <input
          data-hj-allow="true"
          id="subject-1"
          maxlength="100"
          minlength="1"
          name="subject"
          placeholder=" "
          required=""
          type="text"
          value="UniProtKB entry update request"
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label label-wide"
        for="message-1"
      >
        Message:
        <br />
        <small>
          This will be received and reviewed by our team. If you are submitting an error report, please explain what you have been trying, include your input, specify what happened, and include the error message if there is one.
        </small>
      </label>
      <span
        class="input input__message"
      >
        <textarea
          data-hj-allow="true"
          id="message-1"
          minlength="1"
          name="message"
          placeholder="My detailed message to the UniProt team"
          required=""
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label label-wide"
        for="prefilled-1"
      >
        Additional information:
        <br />
        <small>
          This is sent with your message in order to help our helpdesk help you.
        </small>
      </label>
      <span
        class="input input__message"
      >
        <textarea
          data-hj-allow="true"
          id="context-1"
          name="context"
          readonly=""
        >
          Referred from: http://localhost
User browser: mocked user agent
Website version: #git_commit_id
        </textarea>
      </span>
      <label
        class="privacy"
      >
        <input
          name="privacy"
          required=""
          type="checkbox"
        />
        I agree to the processing of my data for the purposes described in this 
        <a
          href="/help/privacy"
        >
          privacy notice
        </a>
        .
        <span
          aria-hidden="true"
          class="required"
        >
           *
        </span>
      </label>
      <input
        aria-hidden="true"
        name="requiredForRobots"
        tabindex="-1"
        type="text"
      />
      <button
        class="button primary"
        type="submit"
      >
        Send message
      </button>
      <aside>
        <h2
          class="small"
        >
          Other ways to contact us
        </h2>
        <ul
          class="no-bullet"
        >
          <li>
            <a
              href="/contact"
            >
              Send us general questions and suggestions
            </a>
          </li>
          <li>
            <a
              class="external-link"
              href="https://www.ebi.ac.uk/swissprot/Submissions/spin/"
              rel="noopener"
              target="_blank"
            >
              Submit new protein sequence data
              <test-file-stub
                data-testid="external-link-icon"
                width="12.5"
              />
            </a>
          </li>
          <li>
            <a
              href="/supporting-data#integration-form"
            >
              Connect your database with UniProt
            </a>
          </li>
        </ul>
      </aside>
    </form>
  </section>
</DocumentFragment>
`;

exports[`ContactForm should render for generic contact form 1`] = `
<DocumentFragment>
  <div
    class="page-intro"
  >
    <h1
      class=""
    >
      Contact us
    </h1>
  </div>
  <section
    class="container"
  >
    <h2
      class="medium"
    >
      Send us general questions and suggestions using the form below
    </h2>
    <p>
      Our helpdesk team will receive and review your message
    </p>
    <hr />
    <div
      class="uniprot-grid-cell--span-12 homepage message message--warning"
      role="status"
    >
      <div
        class="message__side-border"
      />
      <test-file-stub
        class="message--icon-align-top"
        height="1.125em"
        width="1.125em"
      />
      <div
        class="message__title"
      >
        Our Proteomes and UniProtKB/TrEMBL resources are undergoing a significant transition. Please read our 
        <a
          href="/help/refprot_only_changes"
        >
          help page
        </a>
        , view 
        <a
          class="external-link no-right-margin"
          href="https://ftp.ebi.ac.uk/pub/contrib/UniProt/proteomes/"
          rel="noopener"
          target="_blank"
        >
          affected entries and proteomes
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
        , or 
        <a
          href="/contact"
        >
          contact us
        </a>
         with any questions.
      </div>
    </div>
    <form
      aria-label="Contact form"
    >
      <label
        class="label"
        for="name-1"
      >
        Name:
      </label>
      <span
        class="input"
      >
        <input
          data-hj-allow="true"
          id="name-1"
          maxlength="100"
          name="name"
          placeholder=" "
          type="text"
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label"
        for="email-1"
      >
        E-mail:
      </label>
      <span
        class="input"
      >
        <input
          data-hj-allow="true"
          id="email-1"
          maxlength="100"
          minlength="4"
          name="email"
          placeholder="myemail@example.com"
          required=""
          type="email"
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label"
        for="subject-1"
      >
        Subject:
      </label>
      <span
        class="input"
      >
        <input
          data-hj-allow="true"
          id="subject-1"
          maxlength="100"
          minlength="1"
          name="subject"
          placeholder=" "
          required=""
          type="text"
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label label-wide"
        for="message-1"
      >
        Message:
        <br />
        <small>
          This will be received and reviewed by our team. If you are submitting an error report, please explain what you have been trying, include your input, specify what happened, and include the error message if there is one.
        </small>
      </label>
      <span
        class="input input__message"
      >
        <textarea
          data-hj-allow="true"
          id="message-1"
          minlength="1"
          name="message"
          placeholder="My detailed message to the UniProt team"
          required=""
        />
        <span
          aria-hidden="true"
          class="validity required"
        >
          *
        </span>
        <test-file-stub
          aria-hidden="true"
          class="validity valid"
          width="1em"
        />
        <test-file-stub
          aria-hidden="true"
          class="validity invalid"
          width="1em"
        />
      </span>
      <label
        class="label label-wide"
        for="prefilled-1"
      >
        Additional information:
        <br />
        <small>
          This is sent with your message in order to help our helpdesk help you.
        </small>
      </label>
      <span
        class="input input__message"
      >
        <textarea
          data-hj-allow="true"
          id="context-1"
          name="context"
          readonly=""
        >
          Referred from: http://localhost
User browser: mocked user agent
Website version: #git_commit_id
        </textarea>
      </span>
      <label
        class="privacy"
      >
        <input
          name="privacy"
          required=""
          type="checkbox"
        />
        I agree to the processing of my data for the purposes described in this 
        <a
          href="/help/privacy"
        >
          privacy notice
        </a>
        .
        <span
          aria-hidden="true"
          class="required"
        >
           *
        </span>
      </label>
      <input
        aria-hidden="true"
        name="requiredForRobots"
        tabindex="-1"
        type="text"
      />
      <button
        class="button primary"
        type="submit"
      >
        Send message
      </button>
      <aside>
        <h2
          class="small"
        >
          Other ways to contact us
        </h2>
        <ul
          class="no-bullet"
        >
          <li>
            <a
              href="/update"
            >
              Send updates or corrections
            </a>
          </li>
          <li>
            <a
              class="external-link"
              href="https://www.ebi.ac.uk/swissprot/Submissions/spin/"
              rel="noopener"
              target="_blank"
            >
              Submit new protein sequence data
              <test-file-stub
                data-testid="external-link-icon"
                width="12.5"
              />
            </a>
          </li>
          <li>
            <a
              href="/supporting-data#integration-form"
            >
              Connect your database with UniProt
            </a>
          </li>
        </ul>
      </aside>
    </form>
  </section>
</DocumentFragment>
`;
